--- a/App02/package.json
+++ b/App02/package.json
@@ -4,7 +4,8 @@
   "description": "snnipet codes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon -e js,json,njk"
   },
   "keywords": [
     "node",
@@ -15,11 +16,15 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "nunjucks": "^3.1.3"
+    "mysql2": "^1.5.3",
+    "nunjucks": "^3.1.3",
+    "sequelize": "^4.38.0"
   },
   "devDependencies": {
     "eslint": "^5.2.0",
     "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0"
+    "eslint-plugin-import": "^2.13.0",
+    "nodemon": "^1.18.3",
+    "sequelize-cli": "^4.0.0"
   }
 }
